# Oxichat

./: .gitignore  Cargo.toml  README.md  plan_maybe.md
plugins/: package-lock.json  package.json  read_project.ts
ruin_app/: Cargo.toml
ruin_app/src/: main.rs
ruin_core/: config.json  package-lock.json  package.json
ruin_core/src/: index.ts
ruin_core/src/config/: index.ts
ruin_core/src/llm/: client.ts
ruin_core/src/ui/: repl.ts
ruin_ext/: Processor.cs  ruin_ext.csproj
ruin_plugins/: .gitattributes  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
ruin_plugins/.github/workflows/: CI.yml
ruin_plugins/src/: lib.rs
scripts/: build.ps1
src/: main.rs
